--- a/docs/_includes/style.css
+++ b/docs/_includes/style.css
@@ -135,7 +135,7 @@ audio:not([controls]),
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 body {
-  font-family: Helvetica, Tahoma, Arial, 'Hiragino Sans GB', '\51AC\9752\9ED1\4F53', 'Microsoft YaHei', '\5FAE\8F6F\96C5\9ED1', STXihei, '\534E\6587\7EC6\9ED1', SimSun, '\5B8B\4F53', Heiti, '\9ED1\4F53', sans-serif;
+  font-family: Helvetica, Tahoma, Arial, 'Fira Code Retina', sans-serif;
   font-size: 16px;
 }
 @media screen and (max-width: 767px) {
